Fixed stretched project text

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ video {
 
 .projectText {
     width: 100%;
+    height: 100%;
     display: block;
     z-index: -1;
 }
